Fix tab overlap and layers.

--- a/client/src/comp/tab/_tab.less
+++ b/client/src/comp/tab/_tab.less
@@ -1,3 +1,3 @@
-.Tab {
+.ScoreContainer {
   overflow: hidden;
 }
